bk_ida/gccida/g1/decl_attributes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:732:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:737:1: error: use of undeclared identifier 'bitmap_element'
bitmap_element *v8; // r13 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:737:17: error: use of undeclared identifier 'v8'
bitmap_element *v8; // r13 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:742:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:746:27: error: must use 'union' tag to refer to type 'tree_node'
__int64 (  *v17)( tree *, tree_node *, tree_node *, _QWORD, bool *); // rax 
                          ^
                          union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:746:40: error: must use 'union' tag to refer to type 'tree_node'
__int64 (  *v17)( tree *, tree_node *, tree_node *, _QWORD, bool *); // rax 
                                       ^
                                       union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:747:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:749:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:750:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:752:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:755:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:756:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *returned_attrs; // [rsp+10h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:757:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *old_attrs; // [rsp+20h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:787:1: error: use of undeclared identifier 'v8'
v8 = ( bitmap_element *)attribute_tables; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:787:24: error: expected expression
v8 = ( bitmap_element *)attribute_tables; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:787:8: error: use of undeclared identifier 'bitmap_element'
v8 = ( bitmap_element *)attribute_tables; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:790:23: error: use of undeclared identifier 'v8'
next = ( const char *)v8->next->next; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:797:37: error: use of undeclared identifier 'v8'
next = *( const char **)( ( char *)&v8->next->next + v10); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/attribs.c:801:15: error: use of undeclared identifier 'v8'
v7 = ( char *)v8->next + v10; 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decl_attributes/src/obj/attribs.o] Error 1
